# sensEarth

./: .gitattributes  .gitignore  7.1.0  docker-compose.yml  pyproject.toml  sensearth_backup.sql
anomaly-detection/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
anomaly-detection/api/: README.md  alembic.ini
anomaly-detection/api/alembic/: env.py
anomaly-detection/api/src/: database.py  logger.py  main.py
anomaly-detection/configuration/: README.md  border_check.json  clustering.json  cumulative.json  detector_k.json  ema.json  ema_percentile.json  fb_prophet.json  filtering.json  gan.json  hampel.json  isolation_forest.json  linear_fit.json  macd.json  pca.json  rrcf_trees.json  trend_classification.json  welford.json
anomaly-detection/configuration/obsolete/: EMA_Percentile.json  FileConfig.json  Filtering.json  GAN.json  Gan_file_multiple_algs.json  Hampel.json  IsolationForest.json  IsolationForestTrain.json  Kafka_multiple_algs.json  LinearFits.json  MACD.json  PCA.json  PCA_Braila.json  PCA_Braila2.json  config1.json  config2.json  config3.json  config4.json  cumulative.json  demo_graph.json  demo_histogram.json  demo_statuspoints.json  fileKafka.json  (+4 more)
anomaly-detection/data/: README.md  ads-1.csv  ads-1_train.csv  ads-1_train_unlabeled.csv  ads-2.csv  ads-3.csv  ads-4.csv  ads-5.csv  ads-6.csv  ads-7.csv  ads-8.csv  ads-9.csv  ads-test.csv
anomaly-detection/notebooks/: template.ipynb
anomaly-detection/src/: Test.py  consumer.py  normalization.py  output.py  unit_tests.py  visualization.py
(+542 files in other folders)
