[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring"
version = "0.1.0"
description = "WatchDog monitoring client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[tool.setuptools.packages.find]
include = ["monitoring", "monitoring.*"]
exclude = ["anomaly_detection", "database", "web_scraper"]