[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly_detection"
version = "0.1"
description = "Anomaly detection package"
readme = "README.md"
requires-python = ">=3.8.20"
dependencies = []

[tool.setuptools.packages.find]
include = ["anomaly_detection", "anomaly_detection.*""]
exclude = ["api", "api.*"]
